update swagger for Photo
